feat&refactor: 新增 RBAC 角色权限控制模块（2）; 优化部分代码;
